2017-02-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (non_simult_ports_list): Change from arglist to
	GSList.
	(common, required_ports_in_list, wait_if_simult_ports): New functions.
	(next_free_process): Call wait_if_simult_ports(). Improve code style.
	(pluginlaunch_init): Convert non_simult_ports to linked-list.

	* src/plugs_req.c (requirements_common_ports): Remove unused function.

	* src/plugs_req.h, src/utils.h: Remove unused includes and declarations.

	* src/utils.c (common, list2arglist): Remove unused functions.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Drop libopenvas_base and libopenvas_nasl as
	prerequisite.

	* CMakeLists.txt: Remove handling of LIBOPENVAS_BASE.
	Add LIBGVM_UTIL.

	* src/CMakeLists.txt: Remove handling of LIBOPENVAS_BASE.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_find_service.c, src/attack.c, src/comm.c,
	src/nasl_plugins.c, src/openvassd.c, src/pluginlaunch.c,
	src/pluginload.c, src/pluginscheduler.c, src/plugs_req.c:
	Include gvm/util/nvticache.h instead of
	openvas/base/nvticache.h.

	* nasl/nasl_scanner_glue.c: Removed unneeded include.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl.c, nasl/nasl_builtin_nmap.c, nasl/nasl_global_ctxt.h,
	nasl/nasl_http.c, nasl/nasl_misc_funcs.c, nasl/nasl_scanner_glue.c,
	nasl/nasl_ssh.c, src/attack.c, src/openvassd.c, src/pluginload.h,
	src/plugs_req.h: Include gvm/util/kb.h instead of openvas/base/kb.h.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c: Remove unneeded include.

2017-02-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl.h: Remove Doxygen mainpage configuration belonging to the
	openvas-libraries module.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	OTP change: PLUGIN_LIST: The NVT category is now send as
	an integer, not as a string anymore.
